[gd_scene load_steps=2 format=3 uid="uid://enemy001"]

[ext_resource type="Script" path="res://scripts/combat/enemy_base.gd" id="1_script"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_script")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 20)
modulate = Color(0, 0, 0, 0.3)
scale = Vector2(0.3, 0.15)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -25.0
offset_top = -40.0
offset_right = 25.0
offset_bottom = -34.0
show_percentage = false
value = 100.0

[node name="StatusEffects" type="Node2D" parent="."]
position = Vector2(0, -30)

[node name="StunIcon" type="Sprite2D" parent="StatusEffects"]
visible = false
position = Vector2(-15, 0)
scale = Vector2(0.2, 0.2)
modulate = Color(1, 1, 0, 1)

[node name="SlowIcon" type="Sprite2D" parent="StatusEffects"]
visible = false
position = Vector2(0, 0)
scale = Vector2(0.2, 0.2)
modulate = Color(0, 0.5, 1, 1)

[node name="FreezeIcon" type="Sprite2D" parent="StatusEffects"]
visible = false
position = Vector2(15, 0)
scale = Vector2(0.2, 0.2)
modulate = Color(0.5, 0.8, 1, 1)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="Hitbox"]

[node name="SummonTimer" type="Timer" parent="."]
one_shot = false

[node name="TeleportTimer" type="Timer" parent="."]
one_shot = false
